# edm_diffusers

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: example.yaml
scripts/: run.py  sample.py  train.py
src/edm_diffusers/: __init__.py  data.py  edm.py  ema.py  model.py
tests/: smoke_test_sample.sh  smoke_test_train.sh
